@@ -43,8 +43,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	offset of the first element in this page
 	 */
+	@Override
 	public Integer getOffset() {
-		return new Integer( this.offset );
+		return Integer.valueOf( this.offset );
 	}
 
 	/*
@@ -52,8 +53,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	maximum number of elements in a page
 	 */
+	@Override
 	public Integer getPerPage() {
-		return new Integer( this.perPage );
+		return Integer.valueOf( this.perPage );
 	}
 
 	/*
@@ -61,8 +63,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	total number of elements in all pages
 	 */
+	@Override
 	public Long getElementCount() {
-		return new Long( this.elementCount );
+		return Long.valueOf( this.elementCount );
 	}
 
 	/*
@@ -70,8 +73,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	position of current page
 	 */
+	@Override
 	public Integer getCurrentPage() {
-		return new Integer( this.currentPage );
+		return Integer.valueOf( this.currentPage );
 	}
 	
 	/*
@@ -79,8 +83,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	total number of pages
 	 */
+	@Override
 	public Integer getPageCount() {
-		return new Integer( pageCount );
+		return Integer.valueOf( pageCount );
 	}		
 
 	/*
@@ -88,8 +93,9 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	the size of the current page
 	 */
+	@Override
 	public Integer getCurrentPageSize() {
-		return new Integer( this.pageElements.size() );
+		return Integer.valueOf( this.pageElements.size() );
 	}
 	
 	/*
@@ -97,6 +103,7 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	elements in the current page
 	 */
+	@Override
 	public Iterator<T> getPageElements() {
 		return this.pageElements.iterator();
 	}
@@ -106,6 +113,7 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	elements in the current page
 	 */
+	@Override
 	public List<T> getPageElementsList() {
 		return this.pageElements;
 	}
@@ -115,18 +123,21 @@ public abstract class AbstractPagedResult<T> extends BasicResult implements Page
 	 * 
 	 * @return	iterator over page numbers ( 1 - n )
 	 */
+	@Override
 	public Iterator<Integer> getPageCountIterator() {
 		List<Integer> list = new ArrayList<Integer>();
 		for ( int k=1; k<=this.pageCount; k++ ) {
-			list.add( new Integer( k ) );
+			list.add( Integer.valueOf( k ) );
 		}
 		return list.iterator();
 	}
 
+	@Override
 	public Map<String, Object> getInfo() {
 		return info;
 	}
 	
+	@Override
 	public boolean isLastPage() {
 		boolean lastPage = false;
 		long lp = (this.getElementCount()/this.getPerPage())+1;
